[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Blocks/bone_block_2.png" type="Texture" id=1]
[ext_resource path="res://src/environment/BoneBlock.gd" type="Script" id=2]
[ext_resource path="res://Assets/Blocks/bone_block_1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.98905, 7.98438 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.98438, 7.95313 )

[node name="BoneBlock" type="KinematicBody2D"]
z_index = 10
collision_layer = 520
collision_mask = 0
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BoneBlock1" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="BoneBlock2" type="Sprite" parent="."]
texture = ExtResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
